Telemedicine-app/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: e-health
  labels:
    app: e-health-management
